--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -4,17 +4,17 @@ image:
 tasks:
   - name: run-base
     before: |
-      yugabyted start --base_dir=$STORE/ybd1 --listen=$HOST_LB1 --tserver_flags="placement_cloud=cloud1,placement_region=region1,placement_zone=zone1,ysql_num_shards_per_tserver=1,ysql_beta_features=true" --tserver_webserver_port $TSERVER_WEBSERVER_PORT --master_flags="placement_cloud=cloud1,placement_region=region1,placement_zone=zone1,ysql_num_shards_per_tserver=1" --master_webserver_port $MASTER_WEBSERVER_PORT
+      yugabyted start --base_dir=$STORE/ybd1 --listen=$HOST_LB1 --tserver_flags="placement_cloud=cloud1,placement_region=region1,placement_zone=zone1,ysql_num_shards_per_tserver=1,ysql_beta_features=true,tserver_webserver_port=8200" --master_flags="placement_cloud=cloud1,placement_region=region1,placement_zone=zone1,ysql_num_shards_per_tserver=1:
       gp sync-done base
   - name: run-lb2
     before: |
       gp sync-await base
-      yugabyted start --base_dir=$STORE/ybd2 --listen=$HOST_LB2 --join=$HOST_LB --tserver_flags="placement_cloud=cloud1,placement_region=region1,placement_zone=zone1,ysql_num_shards_per_tserver=1,ysql_beta_features=true" --tserver_webserver_port $TSERVER_WEBSERVER_PORT --master_flags="placement_cloud=cloud1,placement_region=region1,placement_zone=zone2,ysql_num_shards_per_tserver=1" --master_webserver_port $MASTER_WEBSERVER_PORT
+      yugabyted start --base_dir=$STORE/ybd2 --listen=$HOST_LB2 --join=$HOST_LB --tserver_flags="placement_cloud=cloud1,placement_region=region1,placement_zone=zone1,ysql_num_shards_per_tserver=1,ysql_beta_features=true,tserver_webserver_port=8200"  --master_flags="placement_cloud=cloud1,placement_region=region1,placement_zone=zone2,ysql_num_shards_per_tserver=1"
       gp sync-done lb2
   - name: run-lb3
     before: |
       gp sync-await lb2
-      yugabyted start --base_dir=$STORE/ybd3 --listen=$HOST_LB3 --join=$HOST_LB --tserver_flags="placement_cloud=cloud1,placement_region=region1,placement_zone=zone1,ysql_num_shards_per_tserver=1,ysql_beta_features=true" --tserver_webserver_port $TSERVER_WEBSERVER_PORT --master_flags="placement_cloud=cloud1,placement_region=region1,placement_zone=zone3,ysql_num_shards_per_tserver=1" --master_webserver_port $MASTER_WEBSERVER_PORT
+      yugabyted start --base_dir=$STORE/ybd3 --listen=$HOST_LB3 --join=$HOST_LB --tserver_flags="placement_cloud=cloud1,placement_region=region1,placement_zone=zone1,ysql_num_shards_per_tserver=1,ysql_beta_features=true tserver_webserver_port=8200" --master_flags="placement_cloud=cloud1,placement_region=region1,placement_zone=zone3,ysql_num_shards_per_tserver=1"
       gp sync-done lb3
   - name: cluster-config
     before: |
@@ -22,7 +22,7 @@ tasks:
       yb-admin -master_addresses $HOST_LB1:7100,$HOST_LB2:7100,$HOST_LB3:7100 modify_placement_info cloud1.region1.zone1,cloud1.region1.zone2,cloud1.region1.zone3 3
   - name: shell
     command: |
-      gp await-port 5433
+      gp ports await 5433
       ysqlsh
             
 # exposed ports
