--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,5 +1,5 @@
 image:
-  file: .gitpod.DockerFile
+  file: .gitpod.dockerybu
 
 tasks:
   - name: run-base
@@ -9,12 +9,12 @@ tasks:
   - name: run-lb2
     before: |
       gp sync-await base
-      yugabyted start --base_dir=$STORE/ybd2 --listen=$HOST_LB2 --join=$HOST_LB --tserver_flags="placement_cloud=cloud1,placement_region=region1,placement_zone=zone1,ysql_num_shards_per_tserver=1,ysql_beta_features=true,tserver_webserver_port=8200"  --master_flags="placement_cloud=cloud1,placement_region=region1,placement_zone=zone2,ysql_num_shards_per_tserver=1"
+      yugabyted start --base_dir=$STORE/ybd2 --listen=$HOST_LB2 --join=$HOST_LB1 --tserver_flags="placement_cloud=cloud1,placement_region=region1,placement_zone=zone1,ysql_num_shards_per_tserver=1,ysql_beta_features=true,tserver_webserver_port=8200"  --master_flags="placement_cloud=cloud1,placement_region=region1,placement_zone=zone2,ysql_num_shards_per_tserver=1"
       gp sync-done lb2
   - name: run-lb3
     before: |
       gp sync-await lb2
-      yugabyted start --base_dir=$STORE/ybd3 --listen=$HOST_LB3 --join=$HOST_LB --tserver_flags="placement_cloud=cloud1,placement_region=region1,placement_zone=zone1,ysql_num_shards_per_tserver=1,ysql_beta_features=true tserver_webserver_port=8200" --master_flags="placement_cloud=cloud1,placement_region=region1,placement_zone=zone3,ysql_num_shards_per_tserver=1"
+      yugabyted start --base_dir=$STORE/ybd3 --listen=$HOST_LB3 --join=$HOST_LB1 --tserver_flags="placement_cloud=cloud1,placement_region=region1,placement_zone=zone1,ysql_num_shards_per_tserver=1,ysql_beta_features=true tserver_webserver_port=8200" --master_flags="placement_cloud=cloud1,placement_region=region1,placement_zone=zone3,ysql_num_shards_per_tserver=1"
       gp sync-done lb3
   - name: cluster-config
     before: |
@@ -48,4 +48,5 @@ ports:
 
 vscode:
   extensions:
-    - GitHub.vscode-pull-request-github
+    - ms-python.python
+    - ms-toolsai.jupyter
