--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,42 +1,10 @@
 image:
   file: .gitpod.dockerybu
-
 tasks:
-  - name: run-base
-    before: |
-      yugabyted start \
-      --base_dir=$STORE/ybd1 \
-      --listen=$HOST_1 \
-      --tserver_flags="placement_cloud=cloud1,placement_region=region1,placement_zone=zone1,ysql_num_shards_per_tserver=1,ysql_beta_features=true,tserver_webserver_port=8201" \
-      --master_flags="placement_cloud=cloud1,placement_region=region1,placement_zone=zone1,ysql_num_shards_per_tserver=1,master_webserver_port=7001" 
-      gp sync-done base
-  - name: run-lb2
-    before: |
-      gp sync-await base
-      yugabyted start \
-      --base_dir=$STORE/ybd2 \
-      --listen=$HOST_2  \
-      --join=$HOST_1 \
-      --tserver_flags="placement_cloud=cloud1,placement_region=region1,placement_zone=zone1,ysql_num_shards_per_tserver=1,ysql_beta_features=true,tserver_webserver_port=8202"  \
-      --master_flags="placement_cloud=cloud1,placement_region=region1,placement_zone=zone2,ysql_num_shards_per_tserver=1,master_webserver_port=7002"
-      gp sync-done lb2
-  - name: run-lb3
-    before: |
-      gp sync-await lb2
-      yugabyted start \
-      --base_dir=$STORE/ybd3 \
-      --listen=$HOST_3 \
-      --join=$HOST_1 \
-      --tserver_flags="placement_cloud=cloud1,placement_region=region1,placement_zone=zone1,ysql_num_shards_per_tserver=1,ysql_beta_features=true,tserver_webserver_port=8203" \
-      --master_flags="placement_cloud=cloud1,placement_region=region1,placement_zone=zone3,ysql_num_shards_per_tserver=1,master_webserver_port=7003"
-      gp sync-done lb3
-  - name: cluster-config
-    before: |
-      gp sync-await lb3
-      yb-admin -master_addresses $HOST_1:7100,$HOST_2:7100,$HOST_3:7100 modify_placement_info cloud1.region1.zone1,cloud1.region1.zone2,cloud1.region1.zone3 3
-  - name: shell
+  - name: run
     command: |
-      gp ports await 5433
+      yugabyted start --base_dir=$STORE --listen=$HOST_LB1
+      gp await-port 5433
       ysqlsh
             
 # exposed ports
@@ -72,3 +40,5 @@ vscode:
   extensions:
     - ms-python.python
     - ms-toolsai.jupyter
+    - ms-toolsai.jupyter-keymap
+    - ms-toolsai.jupyter-renderers
