--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -3,12 +3,18 @@ image:
 tasks:
   - name: run
     command: |
-      yugabyted start --base_dir=$STORE --listen=$HOST_LB1
+      yugabyted start \
+      --base_dir=$STORE \
+      --listen=$HOST_LB1 \
+      --tserver_flags="placement_cloud=cloud1,placement_region=region1,placement_zone=zone1,ysql_num_shards_per_tserver=1,ysql_beta_features=true,tserver_webserver_port=8201" \
+      --master_flags="placement_cloud=cloud1,placement_region=region1,placement_zone=zone1,ysql_num_shards_per_tserver=1,master_webserver_port=7001" 
       gp await-port 5433
       ysqlsh
             
 # exposed ports
 ports:
+  - port: 7000
+    onOpen: notify
   - port: 7001
     onOpen: notify
   - port: 7002
@@ -25,6 +31,8 @@ ports:
     onOpen: ignore
   - port: 7100
     onOpen: ignore
+  - port: 9000
+    onOpen: notify
   - port: 9100
     onOpen: ignore
   - port: 5433
