--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -5,9 +5,9 @@ tasks:
     command: |
       yb-ctl --rf 3 create  \
       --data_dir $STORE \
-      --tserver_flags "yb_num_shards_per_tserver=1,ysql_num_shards_per_tserver=1,ysql_beta_features=true,webserver_port=8200 \
+      --tserver_flags "yb_num_shards_per_tserver=1,ysql_num_shards_per_tserver=1,ysql_beta_features=true,webserver_port=8200" \
       --master_flags "yb_num_shards_per_tserver=1,ysql_num_shards_per_tserver=1" \
-      --num_shards_per_tserver=1  \
+      --num_shards_per_tserver 1  \
       --placement_info "azure.region1.zone1,azure.region1.zone2,azure.region1.zone3" 
       gp await-port 5433
       ysqlsh
