--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -3,8 +3,8 @@ image:
 tasks:
   - name: run
     command: |
-      yb-ctl --rf 3 create  \
-      --data_dir $STORE \
+      yb-ctl create  \
+      --rf 3 \
       --tserver_flags "yb_num_shards_per_tserver=1,ysql_num_shards_per_tserver=1,ysql_beta_features=true,webserver_port=8200" \
       --master_flags "yb_num_shards_per_tserver=1,ysql_num_shards_per_tserver=1" \
       --num_shards_per_tserver 1  \
