--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -2,18 +2,20 @@ image:
   file: .gitpod.DockerFile
 tasks:
   - name: run
-    command: |
+    init:
       pip install ipython-sql
       pip install sqlalchemy
       pip install psycopg2
+    command: |
       yb-ctl create  \
       --rf 3 \
       --tserver_flags "yb_num_shards_per_tserver=1,ysql_num_shards_per_tserver=1,ysql_beta_features=true,webserver_port=8200" \
       --master_flags "yb_num_shards_per_tserver=1,ysql_num_shards_per_tserver=1" \
       --num_shards_per_tserver 1  \
       --placement_info "azure.region1.zone1,azure.region1.zone2,azure.region1.zone3" 
-      gp await-port 5433
-      gp open 01_Lab_Requirements_Setup.ipynb
+      gp ports await 5433
+      gp open 01_Lab_Setup.ipynb
+      yb-ctl status
 ports:
   - port: 7000
     onOpen: open-browser
