--- a/env_vars.env
+++ b/env_vars.env
@@ -1,6 +1,7 @@
 MY_SUDO=psswrd
 MY_DB_NAME=db_ybu
 MY_YB_PATH=/home/gitpod/yugabyte/
+MY_YB_PATH_LOCAL=/Users/seth/yugabyte/yugabyte-2.15.0.0/
 MY_HOST_IPv4_01=127.0.0.1
 MY_HOST_IPv4_02=127.0.0.2
 MY_HOST_IPv4_03=127.0.0.2
