--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -18,9 +18,9 @@ tasks:
       yb-ctl status
 ports:
   - port: 7000
-    onOpen: open-preview
+    onOpen: notify
   - port: 8200
-    onOpen: open-preview
+    onOpen: notify
   - port: 37843
     onOpen: ignore
   - port: 7100
