add my sudo add my path add loopback IPs

--- a/env_vars.env
+++ b/env_vars.env
@@ -1,7 +1,7 @@
-MY_SUDO=psswrd
+MY_SUDO=wdkym8ysNESW!
 MY_DB_NAME=db_ybu
 MY_YB_PATH=/home/gitpod/yugabyte/
-MY_YB_PATH_LOCAL=/Users/seth/yugabyte/yugabyte-2.15.1.0/
+MY_YB_PATH_LOCAL=/Users/markkim/Documents/yugabyteDB/demos/yugabyte-2.14.1.0/
 MY_GITPOD_WORKSPACE_URL_LOCAL=https://yugabytedbuni-ybugitpod-sgjfjfecua0.ws-us53.gitpod.io
 MY_HOST_IPv4_01=127.0.0.1
 MY_HOST_IPv4_02=127.0.0.2
