--- a/env_vars.env
+++ b/env_vars.env
@@ -1,13 +1,17 @@
 MY_SUDO=wdkym8ysNESW!
 MY_DB_NAME=db_ybu
 MY_YB_PATH=/home/gitpod/yugabyte/
-MY_YB_PATH_LOCAL=/Users/markkim/Documents/yugabyteDB/demos/yugabyte-2.14.1.0/
+MY_YB_PATH_LOCAL=/Users/markkim/Documents/yugabyteDB/yugabyte-2.14.1.0/
 MY_GITPOD_WORKSPACE_URL_LOCAL=https://yugabytedbuni-ybugitpod-sgjfjfecua0.ws-us53.gitpod.io
 MY_HOST_IPv4_01=127.0.0.1
 MY_HOST_IPv4_02=127.0.0.2
-MY_HOST_IPv4_03=127.0.0.2
+MY_HOST_IPv4_03=127.0.0.3
 MY_TSERVER_WEBSERVER_PORT=8200
 MY_DATA_DML_FILE=company_dml.sql
 MY_DATA_DDL_FILE=company_ddl.sql
+MY_DATA2_DML_FILE=orders_dml.sql
+MY_DATA2_DDL_FILE=orders_ddl.sql
+MY_DATA3_DML_FILE=orders_dml.sql
+MY_DATA3_DDL_FILE=orders_ddl.sql
 MY_UTIL_FUNCTIONS_FILE=util_functions.sql
 MY_UTIL_YBTSERVER_METRICS_FILE=util_ybtserver_metrics.sql
