--- a/env_vars.env
+++ b/env_vars.env
@@ -14,3 +14,4 @@ MY_DATA3_DML_FILE=orders_dml.sql
 MY_DATA3_DDL_FILE=orders_ddl.sql
 MY_UTIL_FUNCTIONS_FILE=util_functions.sql
 MY_UTIL_YBTSERVER_METRICS_FILE=util_ybtserver_metrics.sql
+My_SUDO=wdkym8ysNESW!
