alter data add pass

--- a/env_vars.env
+++ b/env_vars.env
@@ -1,3 +1,4 @@
+MY_SUDO=wdkym8ysNESW!
 MY_DB_NAME=db_ybu
 MY_YB_PATH=/home/gitpod/yugabyte/
 MY_YB_PATH_LOCAL=/Users/markkim/Documents/yugabyteDB/yugabyte-2.14.1.0/
@@ -14,4 +15,3 @@ MY_DATA3_DML_FILE=orders_dml.sql
 MY_DATA3_DDL_FILE=orders_ddl.sql
 MY_UTIL_FUNCTIONS_FILE=util_functions.sql
 MY_UTIL_YBTSERVER_METRICS_FILE=util_ybtserver_metrics.sql
-My_SUDO=wdkym8ysNESW!
