--- a/env_vars.env
+++ b/env_vars.env
@@ -1,7 +1,9 @@
-MY_SUDO=pwd
+MY_SUDO=''
 MY_DB_NAME=db_ybu
 MY_YB_PATH=/home/gitpod/yugabyte/
-MY_YB_PATH_LOCAL=/Users/seth/yugabyte/yugabyte-2.17.1.0/
+MY_YB_PATH_LOCAL=/Users/seth/yugabyte/yugabyte-2.16.3.0
+MY_YB_PATH_DATA=/home/gitpod/yugabyte-data
+MY_YB_PATH_DATA_LOCAL=/Users/seth/yugabyte-data
 MY_GITPOD_WORKSPACE_URL_LOCAL=https://yugabytedbuni-ybugitpod-fake.ws-us53.gitpod.io
 MY_HOST_IPv4_01=127.0.0.1
 MY_HOST_IPv4_02=127.0.0.2
