--- a/env_vars.env
+++ b/env_vars.env
@@ -1,4 +1,4 @@
-MY_SUDO=''
+MY_SUDO=password
 MY_DB_NAME=db_ybu
 MY_YB_PATH=/home/gitpod/yugabyte/
 MY_YB_PATH_LOCAL=/Users/seth/yugabyte/yugabyte-2.16.3.0
