--- a/env_vars.env
+++ b/env_vars.env
@@ -1,8 +1,9 @@
 MY_SUDO=password
 MY_DB_NAME=db_ybu
-MY_YB_PATH=/home/gitpod/yugabyte/
-MY_YB_PATH_LOCAL=/Users/seth/yugabyte/yugabyte-2.16.3.0
-MY_YB_PATH_DATA=/home/gitpod/yugabyte-data
+MY_YB_PATH_GITPOD=/home/gitpod/yugabyte/
+MY_YB_PATH_DATA_GITPOD=/home/gitpod/yugabyte-data
+MY_YB_PATH_LOCAL_2.16=/Users/seth/yugabyte/yugabyte-2.16.3.0
+MY_YB_PATH_LOCAL=/Users/seth/yugabyte/yugabyte-2.17.3.0
 MY_YB_PATH_DATA_LOCAL=/Users/seth/yugabyte-data
 MY_GITPOD_WORKSPACE_URL_LOCAL=https://yugabytedbuni-ybugitpod-fake.ws-us53.gitpod.io
 MY_HOST_IPv4_01=127.0.0.1
