--- a/env_vars.env
+++ b/env_vars.env
@@ -18,5 +18,8 @@ MY_DATA_DML_FILE_2=orders_dml.sql
 MY_DATA_DDL_FILE_2=orders_ddl.sql
 MY_DATA_DML_FILE_3=orders_dml.sql
 MY_DATA_DDL_FILE_3=orders_ddl.sql
+MY_JEOPARDY_DATA_FILE=jeopardy.tsv
+MY_GITHUB_DATA_FILE=commits.json
+MY_GIN_EXAMPLES=gin_examples.sql
 MY_UTIL_FUNCTIONS_FILE=util_functions.sql
 MY_UTIL_YBTSERVER_METRICS_FILE=util_ybtserver_metrics.sql
