--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -3,9 +3,14 @@ image:
 tasks:
   - name: run
     init:
-      pip install ipython-sql
-      pip install sqlalchemy
-      pip install psycopg2
+      pip install --upgrade pip
+      pip install ipython-sql~=0.5 --upgrade
+      pip install psycopg2-binary
+      pip install SQLAlchemy --upgrade 
+      pip install sqlparse   
+      pip install html2text
+      pip install jq
+      pip install pgspecial
     command: |
       yb-ctl create  \
       --rf 3 \
