--- a/env_vars.env
+++ b/env_vars.env
@@ -14,6 +14,7 @@ MY_HOST_IPv4_01=127.0.0.1
 MY_HOST_IPv4_02=127.0.0.2
 MY_HOST_IPv4_03=127.0.0.3
 MY_JEOPARDY_DATA_FILE=jeopardy.tsv
+MY_MASTER_WEB_PORT=7000
 MY_SUDO=password
 MY_TSERVER_WEB_PORT=8200
 MY_TSERVER_WEBSERVER_PORT=8200
