--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -14,6 +14,7 @@ tasks:
       pip install psycopg2-binary
       pip install pickleshare
       pip install pgspecial
+      pip install pandas
     command: |
       htop
   - name: ybu-lab
